feat(env): Added project name

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=P@ssw0rd
 
 ## Container env
+COMPOSE_PROJECT_NAME=pg-15-2_pg-admin-4
 POSTGRES_IMAGE_VERSION_TAG=15.2
 EXPOSE_POSTGRES_PORT=5433
 EXPOSE_PG_ADMIN_PORT=8081
